# rhythm-game-video-toolkit-skills

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
scripts/: align_videos.py  compose_pip.py  detect_screen_region.py  explore_alignment.py  generate_offset_review_clips.py  kdenlive_truth.py  match_brightness.py  match_clarity.py  match_color_balance.py  match_loudness.py  pip_layout.py  precompress_videos.py  render_final_video.py  video_match_sampling.py
skills/biliup-video-naming/: SKILL.md
skills/biliup-video-naming/agents/: openai.yaml
skills/screen-recording-align-edit/: SKILL.md
skills/screen-recording-align-edit/agents/: openai.yaml
skills/screen-recording-precompress/: SKILL.md
skills/screen-recording-precompress/agents/: openai.yaml
skills/video-offset-align/: SKILL.md
skills/video-postprocess/: SKILL.md
tests/: test_pip_layout.py
